FinanceApp - Commit 05